--- a/Friday.Rmd
+++ b/Friday.Rmd
@@ -256,7 +256,7 @@ covariates.
 
 ```{r}
 #load species abundance data
-spe<-as.data.frame(read_xlsx("dune.xlsx", na = ".",sheet = 1, col_names = TRUE)); spe[1]<-NULL
+spe<-as.data.frame(read_xlsx("Data_2/dune.xlsx", na = ".",sheet = 1, col_names = TRUE)); spe[1]<-NULL
 #we need to provide the model with an appropriate probability distribution for the data.
 #Given our abundance data is on a scale of 1 - 9 we could classify it as ordinal data,
 #but we can try another distribution as well to compare results.
@@ -324,11 +324,11 @@ traits and environmental variables.
 ```{r}
 # Read and treat data
 
-env<-as.data.frame(read_xlsx("dune_env.xlsx", na = "NA",sheet = 1, col_names = TRUE)); env[1]<-NULL
+env<-as.data.frame(read_xlsx("Data_2/dune_env.xlsx", na = "NA",sheet = 1, col_names = TRUE)); env[1]<-NULL
 env$Management<-as.factor(env$Management)
 env$Use<-as.factor(env$Use)
 #This is from a database of plant traits
-traits<-as.data.frame(read_xlsx("TylerTraits.xlsx", na = "NA",sheet = 1, col_names = TRUE, skip = 1))
+traits<-as.data.frame(read_xlsx("Data_2/TylerTraits.xlsx", na = "NA",sheet = 1, col_names = TRUE, skip = 1))
 rownames(traits)<-traits$Spe; traits$Spe<-NULL 
 names(traits)
 traits<-traits[,-c(1:6,22, 27,29,30:32)] # Remove trait not feasible for this analysis
