--- a/Questions.Rmd
+++ b/Questions.Rmd
@@ -948,8 +948,8 @@ indicator values) to interpret the results of the ordinations.
 
 ```{r message=FALSE, warning=FALSE}
 #load Ellenberg data
-dune.ell <- readRDS("Ellenberg.RDS")
-dune.mean.ell <- readRDS("Mean_Ellenberg.RDS")
+dune.ell <- readRDS("Data_2/Ellenberg.RDS")
+dune.mean.ell <- readRDS("Data_2/Mean_Ellenberg.RDS")
 #The vegan implementation of forward selection of variables does not accept NA values.
 #To get around this we will replace the two NAs with the mean value for all plots in that column.
 #Do not do this in a real analysis without seriously thinking about how it affects your results!
@@ -1045,8 +1045,8 @@ between the ten plots.
 ```{r, warning=FALSE, message=FALSE}
 #This partials out the effect of Plot before analysing the effects of Time
 #First load the time series versions of the data
-SpeTS <- readRDS("SpeTS.RDS")
-EnvTS <- readRDS("EnvTS.RDS")
+SpeTS <- readRDS("Data_2/SpeTS.RDS")
+EnvTS <- readRDS("Data_2/EnvTS.RDS")
 time.cca <- cca(SpeTS ~ Time + Condition(Plot), data = EnvTS)
 time.cca
 treat <- EnvTS$Time 
@@ -1172,7 +1172,7 @@ plants.DCA <- decorana(dune)
 #
 # DCA on the insect data (called Bugs)
 #
-insects <- readRDS("Bugs.RDS")
+insects <- readRDS("Data_2/Bugs.RDS")
 insects.DCA <- decorana(insects)
 #
 # Have a look at the DCA based on insects
@@ -1726,7 +1726,7 @@ covariates.
 library(gllvm) #Generalised linear latent variable models
 library(readxl)
 #load species abundance data
-spe<-as.data.frame(read_xlsx("dune.xlsx", na = ".",sheet = 1, col_names = TRUE)); spe[1]<-NULL
+spe<-as.data.frame(read_xlsx("Data_2/dune.xlsx", na = ".",sheet = 1, col_names = TRUE)); spe[1]<-NULL
 #we need to provide the model with an appropriate probability distribution for the data.
 #Given our abundance data is on a scale of 1 - 9 we could classify it as ordinal data,
 #but we can try another distribution as well to compare results.
@@ -1794,11 +1794,11 @@ traits and environmental variables.
 library(readxl)
 library(mvabund)
 
-env<-as.data.frame(read_xlsx("dune_env.xlsx", na = "NA",sheet = 1, col_names = TRUE)); env[1]<-NULL
+env<-as.data.frame(read_xlsx("Data_2/dune_env.xlsx", na = "NA",sheet = 1, col_names = TRUE)); env[1]<-NULL
 env$Management<-as.factor(env$Management)
 env$Use<-as.factor(env$Use)
 #This is from a database of plant traits
-traits<-as.data.frame(read_xlsx("TylerTraits.xlsx", na = "NA",sheet = 1, col_names = TRUE, skip = 1))
+traits<-as.data.frame(read_xlsx("Data_2/TylerTraits.xlsx", na = "NA",sheet = 1, col_names = TRUE, skip = 1))
 rownames(traits)<-traits$Spe; traits$Spe<-NULL 
 names(traits)
 traits<-traits[,-c(1:6,22, 27,29,30:32)] # Remove trait not feasible for this analysis
