--- a/Tuesday.Rmd
+++ b/Tuesday.Rmd
@@ -304,13 +304,19 @@ legend("topright", paste("SD =", round(sd(d1mean), 1))) # Legend with standard d
 ```
 
 Sometimes loaded packages in R can conflict with another package. This
-can happen after an update of one or more packages. Here the current
-version of VIM conflicts with some functions in Vegan that we use later,
-so we need to unload VIM now that we have finished using it.
+can mean that the same function name is used in different packages for 
+example, so the your code may give a different output (or fail) depending
+on the packages you have loaded at the time! It is good practice to write
+code that has a narrow purpose and loads the packages needed for that
+purpose, rather than one huge script running many different analyses.
+However, you may sometimes need to unload a package or restart R to get
+the expected results. You can restart R (note: not the same as restarting
+RStudio!) from the RStudio Session menu or using the following code.
 
 ```{r}
-#VIM package loaded earlier conflicts with SIMPER
+#VIM package loaded earlier conflicts with SIMPER function in Vegan
 detach("package:VIM", unload=TRUE, force = TRUE)
+#To restart R
 .rs.restartR()
 ```
 
